tests/baselines/reference/topLevelAwaitErrors.6(module=es2022).errors.txt
topLevelAwaitErrors.6.ts(2,17): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== topLevelAwaitErrors.6.ts (1 errors) ====
    // await in exported function name should fail
    export function await() {
                    ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    }
    